--- a/myapp/values.yaml
+++ b/myapp/values.yaml
@@ -81,4 +81,4 @@ tolerations: []
 
 affinity: {}
 # myapp/values.yaml
-operatorPrivateKeyKubernetes: "your_default_value"
+operatorPrivateKeyKubernetes: {}
